# mcstatus-bot

./: Cargo.toml  README.md
src/: main.rs  network.rs
src/network/: packets.rs  types.rs
