[package]
name = "minecraft_pinger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"
serenity = "0.10.9"
tokio = { version = "1.14.0", features = ["full"] }

serde_json = "1.0.68"   # JSON interp for the chat
quartz_nbt = "0.2.4"    # NBT library

base64 = "0.13.0"
image = "0.23.14"

# Logging
log = "0.4.0"
env_logger = "0.9.0"